--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-csso": "latest",
     "gulp-load-plugins": "latest",
     "gulp-rename": "latest",
-    "gulp-sass": "latest"
+    "gulp-sass": "latest",
+    "gulp-uglify-es": "^1.0.4"
   }
 }
